--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
   "rules": {
     "no-console": "off",
     "import/no-unresolved": 0,
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "vue/multi-word-component-names": "off"
   }
 }
