--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oce-vue-minimal-sample",
   "description": "A simple site built using Vue and Oracle Content Management",
-  "version": "21.11.1",
+  "version": "21.12.1",
   "author": "Oracle America, Inc.",
   "license": "UPL-1.0",
   "scripts": {
@@ -19,6 +19,7 @@
     "@oracle/content-management-sdk": "^1.3.0",
     "@vue/server-renderer": "~3.0.2",
     "core-js": "~3.6.5",
+    "cross-fetch": "~3.1.4",
     "dotenv": "~8.2.0",
     "express": "~4.17.1",
     "https-proxy-agent": "~5.0.0",
