--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "oce-vue-minimal-sample",
   "description": "A simple site built using Vue and Oracle Content Management",
-  "version": "21.12.1",
+  "version": "22.4.2",
   "author": "Oracle America, Inc.",
   "license": "UPL-1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oracle-samples/oce-vue-minimal-sample.git"
+  },
   "scripts": {
     "build": "rm -rf ./dist && npm run build:client && npm run build:server",
     "build:client": "vue-cli-service build",
@@ -16,8 +20,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "@oracle/content-management-sdk": "^1.3.0",
-    "@vue/server-renderer": "~3.0.2",
+    "@oracle/content-management-sdk": "^1.4.0",
+    "@vue/server-renderer": "~3.2.0",
     "core-js": "~3.6.5",
     "cross-fetch": "~3.1.4",
     "dotenv": "~8.2.0",
@@ -26,25 +30,28 @@
     "node-fetch": "~2.6.1",
     "regenerator-runtime": "~0.13.7",
     "serialize-javascript": "~5.0.1",
-    "vue": "~3.0.0",
+    "vue": "~3.2.0",
     "vue-router": "~4.0.3",
     "vuex": "~4.0.0",
     "xss": "~1.0.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "~7.16.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "~3.0.0",
-    "@vue/eslint-config-airbnb": "~5.1.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-router": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
+    "@vue/compiler-sfc": "~3.2.32",
+    "@vue/eslint-config-airbnb": "~6.0.0",
     "cross-env": "~7.0.2",
-    "eslint": "~7.11.0",
+    "eslint": "~7.32.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-vue": "~8.0.3",
     "webpack-manifest-plugin": "~3.0.0",
     "webpack-node-externals": "~2.5.2"
+  },
+  "overrides": {
+    "@achrinza/node-ipc": "9.2.3"
   },
   "browserslist": [
     "> 1%",
